--- a/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
+++ b/CourseRegistrationSystem/Views/Class/RegisterClassForIU.cshtml
@@ -142,7 +142,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Participant.OrganizationSize, htmlAttributes: new { @class = "control-label col-md-4" })
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Participant.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EnumDropDownListFor(model => model.Participant.OrganizationSize, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Participant.OrganizationSize, "", new { @class = "text-danger" })
                     </div>
                 </div>
