--- a/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
+++ b/CourseRegistrationSystem/Areas/CourseAdmin/CourseAdmin.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="CourseAdmin.Master.cs" Inherits="CourseRegistrationSystem.Areas.CourseAdmin.Site1" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="CourseAdmin.Master.cs" Inherits="CourseRegistrationSystem.Areas.CourseAdmin.Site1"%>
 
 <!DOCTYPE html>
 
@@ -7,7 +7,7 @@
     <title>Course Admin Master</title>
 </head>
 
-<body>
+<body onunload="">
 <form id="form1" runat="server" method="post">
 
     <div>
