--- a/CourseRegistrationSystem/Views/Shared/_LoginPartial.cshtml
+++ b/CourseRegistrationSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNet.Identity
+@using CourseRegistration.BLL;
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -8,38 +9,37 @@
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage", @class="dropdown-toggle"})
-                
-                @if (User.IsInRole("CompanyHR"))
-                {
-                    <ul class="dropdown-menu">
+                <ul class="dropdown-menu">
+                    @if (User.IsInRole(Util.C_Role_CompanyHR))
+                    {
                         <li>@Html.ActionLink("Company Information", "CompanyInfo", "CompanyHR")</li>
                         <li>@Html.ActionLink("Employee List", "EmployeeList", "CompanyHR")</li>
                         <li>@Html.ActionLink("Registration List", "RegistrationList", "CompanyHR")</li>
-                    </ul>
-                }
-                else if (User.IsInRole("IndividualUser"))
-                {
-                    <ul class="dropdown-menu">
+                    }
+                    else if (User.IsInRole(Util.C_Role_IndividualUser))
+                    {
                         <li>@Html.ActionLink("Personal Information", "PersonalInfo", "IndividualUser")</li>
                         <li>@Html.ActionLink("Registration List", "RegistrationList", "IndividualUser")</li>
-                    </ul>
-                }
-                
-                @if (User.IsInRole("SystemAdmin"))
-                {
-                    <ul class="dropdown-menu">
-                        <li>@Html.ActionLink("Personal Information", "PersonalInfo", "IndividualUser")</li>
-                        <li>@Html.ActionLink("Registration List", "RegistrationList", "CompanyHR")</li>
-                    </ul>
-                }
+                    }
 
-                @if (User.IsInRole("CourseAdmin"))
-                {
-                    <ul class="dropdown-menu">
-                        <li>@Html.ActionLink("Personal Information", "PersonalInfo", "IndividualUser")</li>
-                        <li>@Html.ActionLink("Registration List", "RegistrationList", "CompanyHR")</li>
-                    </ul>
-                }
+                    @if (User.IsInRole(CourseRegistration.BLL.Util.C_Role_CourseAdmin) || User.IsInRole(CourseRegistration.BLL.Util.C_Role_SystemAdmin))
+                    {
+
+                        if (User.IsInRole(Util.C_Role_CourseAdmin))
+                        {
+                            <li>
+                                <a href="~/Areas/CourseAdmin/CourseManagement/CourseList.aspx">Course Management</a>
+                            </li>
+                        }
+
+                        if (User.IsInRole(Util.C_Role_SystemAdmin))
+                        {
+                            <li>
+                                <a href="~/Areas/SystemAdmin/RoleManagement.aspx">System Management</a>
+                            </li>
+                        }
+                    }
+                </ul>
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
