--- a/CourseRegistrationSystem/Views/CompanyHR/RegistrationDetails.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/RegistrationDetails.cshtml
@@ -11,6 +11,29 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.CourseClass.Course.CourseTitle)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CourseClass.Course.CourseTitle)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CourseClass.ClassId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.CourseClass.ClassId)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CourseClass.StartDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CourseClass.StartDate)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Sponsorship)
         </dt>
 
@@ -73,31 +96,6 @@
         <dd>
             @Html.DisplayFor(model => model.Status)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsDeleted)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreateDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Timestamp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Timestamp)
-        </dd>
-
     </dl>
 </div>
 <p>
