--- a/CourseRegistrationSystem/Views/CompanyHR/RegistrationList.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/RegistrationList.cshtml
@@ -6,11 +6,20 @@
 
 <h2>RegistrationList</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CourseClass.Course.CourseTitle)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.CourseClass.ClassId)
+        </th>
+
+        <th>
+            @Html.DisplayNameFor(model => model.CourseClass.StartDate)
+        </th>
+        
         <th>
             @Html.DisplayNameFor(model => model.Sponsorship)
         </th>
@@ -35,20 +44,20 @@
         <th>
             @Html.DisplayNameFor(model => model.Status)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDeleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Timestamp)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.CourseClass.Course.CourseTitle)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CourseClass.ClassId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CourseClass.StartDate)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Sponsorship)
         </td>
@@ -74,16 +83,7 @@
             @Html.DisplayFor(modelItem => item.Status)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Timestamp)
-        </td>
-        <td>
-            @Html.ActionLink("Details", "RegistrationDetails", new { id=item.RegistrationId }) |
+            @Html.ActionLink("Details", "RegistrationDetails", new { id=item.RegistrationId })
             @Html.ActionLink("Delete", "RegistrationDelete", new { id = item.RegistrationId })
         </td>
     </tr>
