fix bugs for HR  course registration

--- a/CourseRegistrationSystem/Views/CompanyHR/RegistrationDetails.cshtml
+++ b/CourseRegistrationSystem/Views/CompanyHR/RegistrationDetails.cshtml
@@ -34,6 +34,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Participant.FullName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Participant.FullName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Sponsorship)
         </dt>
 
